tests/baselines/reference/parserParameterList1.errors.txt
==== tests/cases/compiler/parserParameterList1.ts (1 errors) ====
    class C {
       F(...A, B) { }
         ~~~~
!!! parserParameterList1.ts(2,6): error TS1014: A rest parameter must be last in a parameter list.
    }